2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Cached
	  import symbol handler data.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	  Fixed 'Bug 601136 - Remove backing store refactoring is
	  broken'.

2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Refactoring.addin.xml: Make Mac import symbol
	  consistent with Linux/Windows.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Optimized
	  performance a bit.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: fixed
	  'insertNamespace' feature.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Generate
	  descriptions for the types to insert.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: fixed
	  'Bug 599635 - In-place rename should select name'.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Implemented
	  'Bug 596515 - Import Symbol completion command'.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/QuickFixHandler.cs: track API
	  changes.

2010-04-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	* MonoDevelop.Refactoring.IntegrateTemporaryVariable/IntegrateTemporaryVariableRefactoring.cs:
	  Fixed unit tests.

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameItemDialog.cs: Fixed
	  'Bug 595604 - Renaming a constructor should rename the
	  class'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/Change.cs: